# xf_flash_attention_cutlass

./: .gitignore  CMakeLists copy.txt  CMakeLists.txt  CMakeLists.txt.release  build.sh  export copy.cpp  export.cpp  log.txt  rename.py  test  test.cc  test.py
csrc/: paged_attn.cpp  paged_attn.h  paged_attn_bak.cpp
csrc/flash_attn/: flash_api.cpp  flash_api_hip.cpp
csrc/flash_attn/src/: alibi.h  alibi_hip.h  dropout.h  dropout_hip.h  flash.h  flash_bwd_hdim128_bf16_causal_sm80.hip  flash_bwd_hdim128_bf16_sm80.cpp  flash_bwd_hdim128_bf16_sm80.hip  flash_bwd_hdim128_fp16_causal_sm80.hip  flash_bwd_hdim128_fp16_sm80.cpp  flash_bwd_hdim128_fp16_sm80.hip  flash_bwd_hdim160_bf16_causal_sm80.hip  flash_bwd_hdim160_bf16_sm80.cpp  flash_bwd_hdim160_bf16_sm80.hip  flash_bwd_hdim160_fp16_causal_sm80.hip  flash_bwd_hdim160_fp16_sm80.cpp  flash_bwd_hdim160_fp16_sm80.hip  flash_bwd_hdim192_bf16_causal_sm80.hip  flash_bwd_hdim192_bf16_sm80.cpp  flash_bwd_hdim192_bf16_sm80.hip  flash_bwd_hdim192_fp16_causal_sm80.hip  flash_bwd_hdim192_fp16_sm80.cpp  flash_bwd_hdim192_fp16_sm80.hip  flash_bwd_hdim224_bf16_causal_sm80.cu  flash_bwd_hdim224_bf16_causal_sm80.hip  flash_bwd_hdim224_bf16_sm80.cpp  flash_bwd_hdim224_bf16_sm80.cu  flash_bwd_hdim224_bf16_sm80.hip  flash_bwd_hdim224_fp16_causal_sm80.cu  flash_bwd_hdim224_fp16_causal_sm80.hip  flash_bwd_hdim224_fp16_sm80.cpp  flash_bwd_hdim224_fp16_sm80.cu  flash_bwd_hdim224_fp16_sm80.hip  flash_bwd_hdim256_bf16_causal_sm80.hip  flash_bwd_hdim256_bf16_sm80.cpp  flash_bwd_hdim256_bf16_sm80.hip  flash_bwd_hdim256_fp16_causal_sm80.hip  flash_bwd_hdim256_fp16_sm80.cpp  flash_bwd_hdim256_fp16_sm80.hip  flash_bwd_hdim32_bf16_causal_sm80.hip  (+165 more)
